Format TypeScript sources
